# Buscador

./: .gitignore  AGENT_API.md  CONTEXT.md  LICENSE  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: GNOME_SHELL_EXTENSION.md  ZORIN_OS_SETUP.md
docs/superpowers/plans/: 2026-06-25-path-navigation.md
docs/superpowers/specs/: 2026-06-25-path-navigation-design.md
frontend/: index.html  package.json
frontend/src/: i18n.ts  main.ts  style.css
gnome-shell-extension/buscador-launcher-companion@javiju/: extension.js  metadata.json
scripts/: fetch-embedding-model.ps1  fetch-embedding-model.sh  install-gnome-extension.sh  install-local-linux.sh  make-portable.ps1
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/src/: app_catalog.rs  calculator.rs  command_catalog.rs  embedding_engine.rs  file_catalog.rs  freq_store.rs  http_server.rs  icon.rs  indexer.rs  lib.rs  main.rs  models.rs  portal_shortcut.rs  search_service.rs  settings_store.rs  text_matcher.rs  vector_store.rs  web_search.rs
