[package]
name = "buscador_tauri"
version = "0.1.3"
description = "Buscador launcher style Spotlight"
authors = ["Buscador"]
license = "AGPL-3.0-only"
repository = "https://github.com/Javiju555/Buscador"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "buscador_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["unstable"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
anyhow = "1.0"
walkdir = "2.5"
shlex = "1.3"
arboard = "3.6"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
futures-lite = "2"
ashpd = { version = "0.13", features = ["tokio", "global_shortcuts"] }
tokio = { version = "1", features = ["rt"] }
urlencoding = "2.1.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Com",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18.2", features = ["v3_24"] }
webkit2gtk = { version = "2.0.2", features = ["v2_20"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
